chore: Update email address.
Signed-off-by: Bruno Gaspar <brunofgaspar1@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "authors": [
         {
             "name": "Hypefactors ApS",
-            "email": "hello@hypefactors.com",
+            "email": "support@hypefactors.com",
             "homepage": "https://hypefactors.com"
         }
     ],
