--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "illuminate/support": "5.4.*"
+        "illuminate/support": "5.4.*|5.5.*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.0",
