--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
     "name": "hypefactors/laravel-follow",
-    "description": "Laravel 5.4 Follow System for Eloquent models.",
+    "description": "Laravel 5.5 Follow System for Eloquent models.",
     "keywords": [
-        "php", "hypefactors", "laravel", "follow"
+        "php",
+        "hypefactors",
+        "laravel",
+        "follow"
     ],
     "homepage": "https://hypefactors.com",
     "license": "BSD-3-Clause",
@@ -14,20 +17,24 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
-        "illuminate/support": "5.4.*|5.5.*"
+        "php": ">=7.0.0",
+        "illuminate/support": "5.5.*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.0",
-        "mockery/mockery": "^0.9",
-        "orchestra/testbench": "^3.4",
-        "phpunit/phpunit": "^5.7"
+        "mockery/mockery": "^1.0",
+        "orchestra/testbench": "^3.5",
+        "phpunit/phpunit": "^6.0"
     },
     "autoload": {
-        "psr-4": { "Hypefactors\\Laravel\\Follow\\": "src/" }
+        "psr-4": {
+            "Hypefactors\\Laravel\\Follow\\": "src/"
+        }
     },
     "autoload-dev": {
-        "psr-4": { "Hypefactors\\Laravel\\Follow\\Tests\\": "tests/" }
+        "psr-4": {
+            "Hypefactors\\Laravel\\Follow\\Tests\\": "tests/"
+        }
     },
     "config": {
         "preferred-install": "dist",
