chore: Add Laravel 5.5 auto discovery.
Signed-off-by: Bruno Gaspar <brunofgaspar1@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,11 @@
         "component": "package",
         "branch-alias": {
             "dev-master": "1.0.x-dev"
+        },
+        "laravel": {
+            "providers": [
+                "Hypefactors\\Laravel\\Follow\\FollowServiceProvider"
+            ]
         }
     },
     "scripts": {
