--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hypefactors/laravel-follow",
-    "description": "Laravel 5.6 Follow System for Eloquent models.",
+    "description": "Laravel 5.7 Follow System for Eloquent models.",
     "keywords": [
         "php",
         "hypefactors",
@@ -18,12 +18,12 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "illuminate/support": "5.6.*"
+        "illuminate/support": "5.7.*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.0",
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^3.6",
+        "orchestra/testbench": "^3.7",
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
@@ -44,7 +44,7 @@
     "extra": {
         "component": "package",
         "branch-alias": {
-            "dev-master": "2.0.x-dev"
+            "dev-master": "3.0.x-dev"
         },
         "laravel": {
             "providers": [
@@ -56,5 +56,6 @@
         "cs": "vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=estimating",
         "test": "vendor/bin/phpunit --verbose --colors=always"
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
