chore: Update composer.json
Signed-off-by: Bruno Gaspar <brunofgaspar1@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,5 @@
         "cs": "vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=estimating",
         "test": "vendor/bin/phpunit --verbose --colors=always"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "minimum-stability": "stable"
 }
