chore: Update company name
Signed-off-by: Bruno Gaspar <brunofgaspar1@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Hypefactors ApS",
+            "name": "Hypefactors A/S",
             "email": "support@hypefactors.com",
             "homepage": "https://hypefactors.com"
         }
