--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hypefactors/laravel-follow",
-    "description": "Laravel 5.9 Follow System for Eloquent models.",
+    "description": "Laravel 6 Follow System for Eloquent models.",
     "keywords": [
         "php",
         "hypefactors",
@@ -18,13 +18,13 @@
     ],
     "require": {
         "php": ">=7.2",
-        "illuminate/support": "5.9.*"
+        "illuminate/support": "^6.0"
     },
     "require-dev": {
         "hypefactors/php-code-standards": "^1.0",
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^3.9",
-        "phpunit/phpunit": "^7.0"
+        "orchestra/testbench": "^4.0",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
