--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "illuminate/support": "^7.0"
     },
     "require-dev": {
+        "bamarni/composer-bin-plugin": "^1.4",
         "hypefactors/php-code-standards": "^1.0",
         "mockery/mockery": "^1.0",
         "orchestra/testbench": "^5.0",
