--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hypefactors/laravel-follow",
-    "description": "Laravel 8 Follow System for Eloquent models.",
+    "description": "Laravel 9 Follow System for Eloquent models.",
     "keywords": [
         "php",
         "hypefactors",
@@ -17,14 +17,14 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
-        "illuminate/support": "^8.0"
+        "php": "^8.0",
+        "illuminate/support": "^9.0"
     },
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.4",
-        "hypefactors/php-code-standards": "^1.0",
+        "hypefactors/php-code-standards": "^2.0",
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^6.0",
+        "orchestra/testbench": "^7.0",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
@@ -40,12 +40,15 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "bamarni/composer-bin-plugin": true
+        }
     },
     "extra": {
         "component": "package",
         "branch-alias": {
-            "dev-master": "7.0.x-dev"
+            "dev-master": "8.0.x-dev"
         },
         "laravel": {
             "providers": [
